Changed some comments

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
 				session = TB.initSession(sessionId);
 
-				// This class does all the layout management for us
+				// This class does all the video publishing and subscribing for us
 				OT_Widget.init(session, "streamContainer", 800, 300);
 				
 				// Set up event handler to listen for signals
